<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ReverseFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/backgroundColor"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_id_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />


            <TextView
                android:id="@+id/tv_reverse_sentence_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/tv_reverse_sentence"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="@id/gl_id_1" />

            <EditText
                android:id="@+id/et_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/et_hint_lat"
                android:inputType="numberSigned|numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/tv_reverse_sentence_user" />

            <EditText
                android:id="@+id/et_lng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/et_hint_lng"
                android:inputType="numberSigned|numberDecimal"
                android:digits="0123456789.-"
                app:layout_constraintTop_toBottomOf="@id/et_lat" />

            <Button
                android:id="@+id/b_confirm"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/secondayColor"
                android:text="@string/b_confirm"
                android:textColor="@color/backgroundColor"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_lng" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                app:layout_constraintTop_toBottomOf="@id/b_confirm" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>